--- a/theory.html
+++ b/theory.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header>
+    <img src="media/images/banner-slim.jpg" alt="Waveforms banner slim version" class="slim-banner">
     <nav>
       <a href="index.html">Home</a>
       <a href="theory.html">Theoretical Conversations</a>
