--- a/author.html
+++ b/author.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header>
+    <img src="media/images/banner-slim.jpg" alt="Waveforms banner slim version" class="slim-banner">
     <nav>
       <!-- Navigation links will go here -->
     </nav>
