--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <img src="media/images/banner.jpg" alt="Waveforms webtext banner" style="width:100%;">
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html">Intro</a>
       <a href="theory.html">Theoretical Conversations</a>
       <a href="methods.html">Remixed Methods</a>
       <a href="praisesongs.html">Praisesongs</a>
