--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mooney, Waveforms - Home</title>
+  <title>Mooney, Waveforms - Intro</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
