--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </nav>
   </header>
   <main>
-    <h1>Introduction</h1>
+    <h1>Intro: Welcome to WAVEFORMS</h1>
+    <p>This webtext mixtape is adapted from my dissertation study on Hip Hop and spoken word poetry in K–12 classrooms...</p>
     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
       src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
     </iframe>
