--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="media/images/banner.jpg" alt="Waveforms webtext banner" style="width:100%;">
     <nav>
       <a href="index.html"><img src="media/images/nav-intro.png" alt="Intro"></a>
-      <a href="theory.html">Theoretical Conversations</a>
+      <a href="theory.html"><img src="media/images/nav-theory.png" alt="Theoretical Conversations"></a>
       <a href="methods.html">Remixed Methods</a>
       <a href="praisesongs.html">Praisesongs</a>
       <a href="outro.html">Outro</a>
