--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <nav>
       <a href="index.html"><img src="media/images/nav-intro.png" alt="Intro"></a>
       <a href="theory.html"><img src="media/images/nav-theory.png" alt="Theoretical Conversations"></a>
-      <a href="methods.html">Remixed Methods</a>
-      <a href="praisesongs.html">Praisesongs</a>
-      <a href="outro.html">Outro</a>
-      <a href="references.html">References</a>
-      <a href="author.html">Author</a>
+      <a href="methods.html"><img src="media/images/nav-methods.png" alt="Remixed Methods"></a>
+      <a href="praisesongs.html"><img src="media/images/nav-praisesongs.png" alt="Praisesongs"></a>
+      <a href="outro.html"><img src="media/images/nav-outro.png" alt="Outro"></a>
+      <a href="references.html"><img src="media/images/nav-references.png" alt="References"></a>
+      <a href="author.html"><img src="media/images/nav-author.png" alt="Author"></a>
     </nav>
   </header>
   <main>
