--- a/outro.html
+++ b/outro.html
@@ -9,7 +9,13 @@
   <header>
     <img src="media/images/banner-slim.jpg" alt="Waveforms banner slim version" class="slim-banner">
     <nav>
-      <!-- Navigation links will go here -->
+        <a href="index.html"><img src="media/images/nav-intro.png" alt="Intro"></a>
+        <a href="theory.html"><img src="media/images/nav-theory.png" alt="Theoretical Conversations"></a>
+        <a href="methods.html"><img src="media/images/nav-methods.png" alt="Remixed Methods"></a>
+        <a href="praisesongs.html"><img src="media/images/nav-praisesongs.png" alt="Praisesongs"></a>
+        <a href="outro.html"><img src="media/images/nav-outro.png" alt="Outro"></a>
+        <a href="references.html"><img src="media/images/nav-references.png" alt="References"></a>
+        <a href="author.html"><img src="media/images/nav-author.png" alt="Author"></a>
     </nav>
   </header>
   <main>
