--- a/references.html
+++ b/references.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <header>
-    <img src="media/images/banner-slim.jpg" alt="Waveforms banner slim version" class="slim-banner">
+  <a href="index.html">
+  <img src="media/images/banner-slim.jpg" alt="Waveforms webtext slim banner" style="width:100%;">
+</a>
     <nav>
         <a href="index.html"><img src="media/images/nav-intro.png" alt="Intro"></a>
         <a href="theory.html"><img src="media/images/nav-theory.png" alt="Theoretical Conversations"></a>
