--- a/outro.html
+++ b/outro.html
@@ -10,15 +10,56 @@
    <a href="index.html">
   <img src="media/images/banner-slim.jpg" alt="Waveforms webtext slim banner" style="width:100%;">
 </a>
-    <nav>
-        <a href="index.html"><img src="media/images/nav-intro.png" alt="Intro"></a>
-        <a href="theory.html"><img src="media/images/nav-theory.png" alt="Theoretical Conversations"></a>
-        <a href="methods.html"><img src="media/images/nav-methods.png" alt="Remixed Methods"></a>
-        <a href="praisesongs.html"><img src="media/images/nav-praisesongs.png" alt="Praisesongs"></a>
-        <a href="outro.html"><img src="media/images/nav-outro.png" alt="Outro"></a>
-        <a href="references.html"><img src="media/images/nav-references.png" alt="References"></a>
-        <a href="author.html"><img src="media/images/nav-author.png" alt="Author"></a>
-    </nav>
+   <nav>
+  <a href="index.html">
+    <img src="media/images/nav-intro.png" alt="Intro">
+  </a>
+
+  <div class="dropdown">
+    <a href="theory.html">
+      <img src="media/images/nav-theory.png" alt="Theoretical Conversations">
+    </a>
+    <div class="dropdown-content">
+      <a href="recife.html">Recife to Ferguson</a>
+      <a href="long-as-i-live.html">Long as I Live</a>
+    </div>
+  </div>
+
+  <div class="dropdown">
+    <a href="methods.html">
+      <img src="media/images/nav-methods.png" alt="Remixed Methods">
+    </a>
+    <div class="dropdown-content">
+      <a href="realm-of-entities.html">Realm of Entities</a>
+      <a href="poem-is-research.html">The Poem is the Research</a>
+    </div>
+  </div>
+
+  <div class="dropdown">
+    <a href="praisesongs.html">
+      <img src="media/images/nav-praisesongs.png" alt="Praisesongs">
+    </a>
+    <div class="dropdown-content">
+      <a href="edsel-song.html">Edsel’s Song</a>
+      <a href="aaleah-song.html">Aaleah’s Song</a>
+      <a href="otto-song.html">Otto’s Song</a>
+      <a href="fatmata-song.html">Fatmata’s Song</a>
+    </div>
+  </div>
+
+  <a href="outro.html">
+    <img src="media/images/nav-outro.png" alt="Outro">
+  </a>
+
+  <a href="references.html">
+    <img src="media/images/nav-references.png" alt="References">
+  </a>
+
+  <a href="author.html">
+    <img src="media/images/nav-author.png" alt="Author">
+  </a>
+</nav>
+
   </header>
   <main>
     <h1>Outro</h1>
