--- a/praisesongs.html
+++ b/praisesongs.html
@@ -16,9 +16,9 @@
   </a>
 
   <div class="dropdown">
-    <a href="theory.html">
+    <span>
       <img src="media/images/nav-theory.png" alt="Theoretical Conversations">
-    </a>
+    </span>
     <div class="dropdown-content">
       <a href="recife.html">Recife to Ferguson</a>
       <a href="long-as-i-live.html">Long as I Live</a>
@@ -26,9 +26,9 @@
   </div>
 
   <div class="dropdown">
-    <a href="methods.html">
+    <span>
       <img src="media/images/nav-methods.png" alt="Remixed Methods">
-    </a>
+    </span>
     <div class="dropdown-content">
       <a href="realm-of-entities.html">Realm of Entities</a>
       <a href="poem-is-research.html">The Poem is the Research</a>
@@ -36,9 +36,9 @@
   </div>
 
   <div class="dropdown">
-    <a href="praisesongs.html">
+    <span>
       <img src="media/images/nav-praisesongs.png" alt="Praisesongs">
-    </a>
+    </span>
     <div class="dropdown-content">
       <a href="edsel-song.html">Edsel’s Song</a>
       <a href="aaleah-song.html">Aaleah’s Song</a>
