--- a/recife.html
+++ b/recife.html
@@ -48,4 +48,26 @@
       </div>
 
       <a href="outro.html">
-        <img src="medi
+        <img src="media/images/nav-outro.png" alt="Outro">
+      </a>
+
+      <a href="references.html">
+        <img src="media/images/nav-references.png" alt="References">
+      </a>
+
+      <a href="author.html">
+        <img src="media/images/nav-author.png" alt="Author">
+      </a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Recife to Ferguson</h1>
+    <p>Coming soon: Content for this page will explore connections between Recife and Ferguson, focusing on waveform, culture, and pedagogy themes.</p>
+  </main>
+
+  <footer>
+    Brian Mooney 2025
+  </footer>
+</body>
+</html>
