--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -55,4 +55,19 @@
         <img src="media/images/nav-references.png" alt="References">
       </a>
 
-      <a href="autho
+      <a href="author.html">
+        <img src="media/images/nav-author.png" alt="Author">
+      </a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Realm of Entities</h1>
+    <p>Coming soon: Content for this page will explore the concept of entities as part of remixed methods in waveform pedagogy.</p>
+  </main>
+
+  <footer>
+    Brian Mooney 2025
+  </footer>
+</body>
+</html>
