--- a/aaleah-song.html
+++ b/aaleah-song.html
@@ -56,4 +56,18 @@
       </a>
 
       <a href="author.html">
-        <img src="media/ima
+        <img src="media/images/nav-author.png" alt="Author">
+      </a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Aaleah’s Song</h1>
+    <p>Coming soon: Content for this page will explore Aaleah’s voice, story, and sonic contribution to the Waveforms project.</p>
+  </main>
+
+  <footer>
+    Brian Mooney 2025
+  </footer>
+</body>
+</html>
