--- a/index.html
+++ b/index.html
@@ -62,10 +62,14 @@
 
   </header>
   <main>
-    <h1>Intro: Welcome to WAVEFORMS</h1>
-    <p>This webtext mixtape is adapted from my dissertation study on Hip Hop and spoken word poetry in K–12 classrooms...</p>
-    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
+  <h1>Intro: Welcome to WAVEFORMS</h1>
+  <p>Waveforms is a multimodal exploration of sound, pedagogy, and culture. This project invites readers and listeners into a remix of theory, practice, and performance.</p>
+
+  <div style="text-align: center; margin-top: 2rem;">
+    <iframe width="60%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">></iframe>
+  </div>
+</main> 
     </iframe>
     <p><a href="https://www.dropbox.com/scl/fi/ccoz18gs1sssqi8gi5k4w/Intro-Transcribed.docx?rlkey=p2bi5xrwj7xa00o8v8ggr73nn&dl=0" target="_blank">Download transcript of Intro</a></p>
     <figure>
