--- a/index.html
+++ b/index.html
@@ -61,15 +61,14 @@
 </nav>
 
   </header>
-  <main>
+ <main>
+  <div class="audio-embed">
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+      src="YOUR_SOUNDCLOUD_EMBED_URL_HERE"></iframe>
+  </div>
   <h1>Intro: Welcome to WAVEFORMS</h1>
   <p>Waveforms is a multimodal exploration of sound, pedagogy, and culture. This project invites readers and listeners into a remix of theory, practice, and performance.</p>
-
-  <div style="text-align: center; margin-top: 2rem;">
-    <iframe width="60%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">></iframe>
-  </div>
-</main> 
+</main>
     </iframe>
     <p><a href="https://www.dropbox.com/scl/fi/ccoz18gs1sssqi8gi5k4w/Intro-Transcribed.docx?rlkey=p2bi5xrwj7xa00o8v8ggr73nn&dl=0" target="_blank">Download transcript of Intro</a></p>
     <figure>
