--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
  <main>
   <div class="audio-embed">
     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-      src=""https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23431a50&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
+    </iframe>
   </div>
+
   <h1>Intro: Welcome to WAVEFORMS</h1>
   <p>Waveforms is a multimodal exploration of sound, pedagogy, and culture. This project invites readers and listeners into a remix of theory, practice, and performance.</p>
 </main>
