--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     </iframe>
   </div>
 
+<p class="transcript-link">
+  <a href="intro-transcript.html" target="_blank">Link to Transcript</a>
+</p>
+ 
   <h1>Intro: Welcome to WAVEFORMS</h1>
   <p>Waveforms is a multimodal exploration of sound, pedagogy, and culture. This project invites readers and listeners into a remix of theory, practice, and performance.</p>
 </main>
