--- a/index.html
+++ b/index.html
@@ -69,9 +69,25 @@
   </div>
 
 <p class="transcript-link">
-  <a href="intro-transcript.html" target="_blank">Link to Transcript</a>
+  <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a>
 </p>
- 
+
+<div id="transcript-box" class="transcript-box" style="display: none;">
+  <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
+  <p>
+    <strong>Intro: Words by Common</strong><br>
+    <br>
+    we about to have<br>
+    an incredible experience<br>
+    <br>
+    of art / love / poetry /<br>
+    emceeing / freedom / expression<br>
+    <br>
+    Are y’all ready?<br>
+    I said, are y’all ready?
+  </p>
+</div>
+
   <h1>Intro: Welcome to WAVEFORMS</h1>
   <p>Waveforms is a multimodal exploration of sound, pedagogy, and culture. This project invites readers and listeners into a remix of theory, practice, and performance.</p>
 </main>
