--- a/index.html
+++ b/index.html
@@ -69,23 +69,22 @@
   </div>
 
 <p class="transcript-link">
-  <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a>
+  <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
+  <a href="intro-transcript.html" target="_blank">Accessible Plain Text Transcript</a>
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <p>
-    <strong>Intro: Words by Common</strong><br>
-    <br>
-    we about to have<br>
-    an incredible experience<br>
-    <br>
-    of art / love / poetry /<br>
-    emceeing / freedom / expression<br>
-    <br>
-    Are y’all ready?<br>
-    I said, are y’all ready?
-  </p>
+  <div class="transcript-scroll">
+    <p><strong>Intro: Words by Common</strong></p>
+    <p>we about to have</p>
+    <p>an incredible experience</p>
+    <p>of art / love / poetry /</p>
+    <p>emceeing / freedom / expression</p>
+    <p>Are y’all ready?</p>
+    <p>I said, are y’all ready?</p>
+    <!-- Add your full lyrics or replace this with longer track text -->
+  </div>
 </div>
 
   <h1>Intro: Welcome to WAVEFORMS</h1>
