--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
   <div class="transcript-scroll">
     <p><strong>Intro: Words by Common</strong></p>
-    <p>we about to have</p>
-    <p>an incredible experience</p>
-    <p>of art / love / poetry /</p>
-    <p>emceeing / freedom / expression</p>
-    <p>Are y’all ready?</p>
-    <p>I said, are y’all ready?</p>
-    <!-- Add your full lyrics or replace this with longer track text -->
-  </div>
+  <p>we about to have<br>
+  an incredible experience</p>
+
+  <p>of art / love / poetry /<br>
+  emceeing / freedom / expression</p>
+
+  <p>Are y’all ready?<br>
+  I said, are y’all ready?</p>
 </div>
 
   <h1>Intro: Welcome to WAVEFORMS</h1>
