--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 </nav>
 
   </header>
+   <h1>Intro: Welcome to WAVEFORMS</h1>
  <main>
   <div class="audio-embed">
     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
@@ -87,11 +88,10 @@
   I said, are y’all ready?</p>
 </div>
 
-  <h1>Intro: Welcome to WAVEFORMS</h1>
+  </div>
+ 
   <p>Waveforms is a multimodal exploration of sound, pedagogy, and culture. This project invites readers and listeners into a remix of theory, practice, and performance.</p>
 </main>
-    </iframe>
-    <p><a href="https://www.dropbox.com/scl/fi/ccoz18gs1sssqi8gi5k4w/Intro-Transcribed.docx?rlkey=p2bi5xrwj7xa00o8v8ggr73nn&dl=0" target="_blank">Download transcript of Intro</a></p>
     <figure>
       <img src="media/images/figure1.png" alt="Ableton Live session view showing color-coded clips for Waveforms project" style="max-width:100%;">
       <figcaption>Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process.</figcaption>
