--- a/long-as-i-live.html
+++ b/long-as-i-live.html
@@ -65,11 +65,6 @@
     <h1>Long as I Live</h1>
     <p>Coming soon: Content for this page will explore the themes of Long as I Live in the context of waveform, memory, and pedagogy.</p>
   </main>
-  
+
+  <footer>Brian Mooney 2025</footer>
 </body>
-
-  <footer>
-    Brian Mooney 2025
-  </footer>
-
-</html>
