--- a/references.html
+++ b/references.html
@@ -185,3 +185,6 @@
 <p>Sterne, Jonathan. (Ed.). (2012). <em>The sound studies reader.</em> Routledge.</p>
 
 </ul>
+
+      <footer>Brian Mooney 2025</footer>
+</body>
