--- a/recife.html
+++ b/recife.html
@@ -66,8 +66,7 @@
     <p>Coming soon: Content for this page will explore connections between Recife and Ferguson, focusing on waveform, culture, and pedagogy themes.</p>
   </main>
 
-  <footer>
-    Brian Mooney 2025
+  <footer> &copy; Brian Mooney 2025
   </footer>
 </body>
 </html>
