--- a/recife.html
+++ b/recife.html
@@ -66,7 +66,9 @@
     <p>Coming soon: Content for this page will explore connections between Recife and Ferguson, focusing on waveform, culture, and pedagogy themes.</p>
   </main>
 
-  <footer> &copy; Brian Mooney 2025
+  <footer>
+    <p>&copy; 2025 Brian Mooney</p>
   </footer>
+
 </body>
 </html>
