--- a/long-as-i-live.html
+++ b/long-as-i-live.html
@@ -66,5 +66,7 @@
     <p>Coming soon: Content for this page will explore the themes of Long as I Live in the context of waveform, memory, and pedagogy.</p>
   </main>
 
-  <footer>Brian Mooney 2025</footer>
+    <footer>
+    <p>&copy; 2025 Brian Mooney</p>
+  </footer>
 </body>
