--- a/edsel-song.html
+++ b/edsel-song.html
@@ -66,8 +66,8 @@
     <p>Coming soon: Content for this page will explore Edsel’s contributions, narrative, and sonic imprint within the Waveforms project.</p>
   </main>
 
-  <footer>
-    Brian Mooney 2025
+   <footer>
+    <p>&copy; 2025 Brian Mooney</p>
   </footer>
 </body>
 </html>
