--- a/poem-is-research.html
+++ b/poem-is-research.html
@@ -66,8 +66,8 @@
     <p>Coming soon: Content for this page will explore how poetic form and method function as research in waveform pedagogy.</p>
   </main>
 
-  <footer>
-    Brian Mooney 2025
+   <footer>
+    <p>&copy; 2025 Brian Mooney</p>
   </footer>
 </body>
 </html>
