--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -66,8 +66,8 @@
     <p>Coming soon: Content for this page will explore the concept of entities as part of remixed methods in waveform pedagogy.</p>
   </main>
 
-  <footer>
-    Brian Mooney 2025
+   <footer>
+    <p>&copy; 2025 Brian Mooney</p>
   </footer>
 </body>
 </html>
