--- a/aaleah-song.html
+++ b/aaleah-song.html
@@ -63,6 +63,31 @@
 
   <main>
     <h1>Aaleah’s Song</h1>
+    <div class="audio-embed">
+  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
+  </iframe>
+</div>
+
+<p class="transcript-link">
+  <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
+  <a href="intro-transcript.html">Accessible Plain Text Transcript</a>
+</p>
+
+<div id="transcript-box" class="transcript-box" style="display: none;">
+  <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
+  <div class="transcript-scroll">
+    <p><strong>Placeholder Title</strong></p>
+    <p>Placeholder lyric line 1<br>
+    Placeholder lyric line 2</p>
+
+    <p>Placeholder lyric line 3<br>
+    Placeholder lyric line 4</p>
+
+    <p>...</p>
+  </div>
+</div>
+
     <p>Coming soon: Content for this page will explore Aaleah’s voice, story, and sonic contribution to the Waveforms project.</p>
   </main>
 
