--- a/fatmata-song.html
+++ b/fatmata-song.html
@@ -63,9 +63,9 @@
 
   <main>
     <h1>Fatmata’s Song</h1>
-    <div class="audio-embed">
+   <div class="audio-embed">
   <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1273888957&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false>
+    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1273888957&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
   </iframe>
 </div>
 
@@ -88,7 +88,7 @@
   </div>
 </div>
 
-    <p>Coming soon: Content for this page will explore Fatmata’s story and sonic contribution to the Waveforms project.</p>
+    <p>Content coming soon...</p>
   </main>
 
   <footer>
