--- a/recife.html
+++ b/recife.html
@@ -76,15 +76,115 @@
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll">
-    <p><strong>Placeholder Title</strong></p>
-    <p>Placeholder lyric line 1<br>
-    Placeholder lyric line 2</p>
+  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+    <pre style="white-space: pre-wrap; font-family: sans-serif;">
+[GCS] Paulo Freire, the Brazilian educator        
+and philosopher was born in Recife, where 
+we are right now. 
 
-    <p>Placeholder lyric line 3<br>
-    Placeholder lyric line 4</p>
+[News Clip] Crowds gathered across 
+the United States over the weekend
+for more protests in 
+the wake of George Floyd’s killing 
+in police custody. 
 
-    <p>...</p>
+[AC] Reflect, act, and 
+change what is not 
+working.
+
+[PF] What I want is a world
+ in which it is easier 
+for us to Love.
+
+[SS] Critical Pedagogy 
+meaning another way, 
+an alternative,
+a truly social, theoretical,
+philosophical, intellectual,
+public discourse on education. 
+
+[PF] I am a curious being.
+
+[PF] ...in the struggle against injustice.
+
+[PM]: critical consciousness—
+
+[HG] As a way of getting kids to understand
+themselves, their relationship to others,
+and what it meant to actively change the world itself.
+
+[PF] It’s impossible to think of language 
+without thinking of ideology and power.
+
+[PF] Here and now fighting for being.
+
+[Protestors] Black Lives Matter!
+
+[AC] Reflect, act, and change what is not working.
+
+[PF] What I want is a world in which it is easier for us to Love.
+
+[News Clip] From New York to Minneapolis, Atlanta to Seattle, healthcare workers take a knee for racial injustice. many crossing from the frontline of a pandemic to the forefront of a national protest. 
+
+[PF] Friendship, to be together, to help, to be helped. 
+
+[PM] Objects, subjects, questions. 
+
+[Protestors] Black Lives Matter!
+
+[PF] Their way of speaking is as beautiful as our way. They have the right to speak like this. 
+
+[HG] What does it mean to create the tools where people can be not only critics but cultural producers?
+
+[PF] in the struggle against injustice
+
+[News Clip] Thousands of protesters in the streets 
+demanding real action on climate change. 
+
+[AC] Reflect, act, and change what is not working.
+
+[PF] What I want is a world in which it is easier for us to Love. 
+
+[HG] It’s impossible for education to be neutral. 
+There’s no such thing as a neutral education. 
+All education is an introduction to the future. 
+It’s a struggle over what kind of future 
+you want for young people. 
+
+[PF] Why am I here? With whom am I? 
+With whom I fight? Against whom I fight?
+What is my dream? 
+
+[PF] Our greatest task 
+is to make the heaven here.
+
+[SS] And he said that romantic Love 
+needed to truly be linked 
+with community 
+and social Love. 
+
+[SS] Radical Love. 
+
+[News Clip] A protracted standoff between a major oil company and northern Indigenous American tribes intensified today.
+
+[AC] Reflect, act, and change what is not working.
+
+[PF] What I want is a world in which it is easier for us to Love. 
+
+[PF] Know that I am curious. 
+I was a curious boy. 
+And I am a curious old man. 
+My curiosity never stop. 
+
+[samba music fades]
+
+
+[PF] - Paulo Freire
+[AC] - Ana Cruz
+[SS] - Shirley R. Steinberg
+[HH] - Henry Giroux
+[PM] - Peter McLaren
+    </pre>
   </div>
 </div>
 
