--- a/long-as-i-live.html
+++ b/long-as-i-live.html
@@ -76,16 +76,84 @@
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll">
-    <p><strong>Placeholder Title</strong></p>
-    <p>Placeholder lyric line 1<br>
-    Placeholder lyric line 2</p>
+  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+  <pre style="white-space: pre-wrap; font-family: sans-serif;">
+Jazzy intro fades in
 
-    <p>Placeholder lyric line 3<br>
-    Placeholder lyric line 4</p>
+[BL] Listen!
 
-    <p>...</p>
-  </div>
+[MLH] Hip Hop habits of body and mind.
+
+[BL] They’re drumming.
+There’s a soundtrack
+playing in their bodies.
+
+[JDA] Forms of representation
+and communication that are
+electronic.
+
+[BL] Hip Hop everywhere!
+So you have to listen.
+
+[CE] Hip Hop is the cultural artifact
+and the art form that has been
+transplanted from the Bronx, 
+New York City,
+to all over the planet. 
+It has captured the minds, thoughts, ideas
+of a whole new generation of people. 
+
+[BL] Hip Hop sensibilities—
+and that is a way of knowing, 
+a way of being, 
+and a way of thinking. 
+
+[CE] It is the culture
+of young people.
+
+[BL] Soundtrack.
+
+[BL] Their Hip Hop identities
+are directly linked to schooling.
+
+[JDA] Electronic.
+
+[DK] They’re reading and writing
+in complicated and beautiful ways. 
+
+[BL] Listen!
+
+[DK] Whenever you enter
+into a classroom space
+you’re entering into 
+a contested space. 
+It’s a political space.  
+
+[BL] Knowledge as an embodied practice.
+
+[MLH] Hip Hop habits of body and mind.
+
+[BL] They’re drumming.
+There’s a soundtrack
+playing in their bodies.
+
+[JDA] Forms of representation
+and communication that are
+electronic.
+
+[BL] Hip Hop everywhere!          [JDA] electronic
+
+[BL] So you have to listen.
+
+
+[BL] Bettina Love
+[CE] Chris Emdin
+[DK] David Kirkland
+[JDA] Jeff Duncan-Andrade
+[MLH] Marc Lamont Hill
+  </pre>
+</div>
+
 </div>
 
     <p>Coming soon: Content for this page will explore the themes of Long as I Live in the context of waveform, memory, and pedagogy.</p>
