--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -71,21 +71,104 @@
 
 <p class="transcript-link">
   <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
-  <a href="intro-transcript.html">Accessible Plain Text Transcript</a>
+  <a href="realm-of-entities-transcript.html">Accessible Plain Text Transcript</a>
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll">
-    <p><strong>Placeholder Title</strong></p>
-    <p>Placeholder lyric line 1<br>
-    Placeholder lyric line 2</p>
+  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+  <pre style="white-space: pre-wrap; font-family: sans-serif;">
+[KF] Remix: to combine 
+or edit existing materials
+to produce something new. 
 
-    <p>Placeholder lyric line 3<br>
-    Placeholder lyric line 4</p>
+[Voice] This is a glimpse of tomorrow.
 
-    <p>...</p>
-  </div>
+[KF] Everything is a remix—  
+appropriated
+	transformed
+		& subverted
+
+copy     transform     & combine
+
+[Voice] Open your eyes. 
+
+[GK] One mode alone won’t do it. 
+A multimodal lens
+gives you the possibility 
+of seeing	  more. 
+
+[KF] Creation requires influence. 
+
+[JS] A soundtrack for our study
+of humanity. 
+
+[AB] Knowledge is design-dependent.
+
+[KF] The act of creation
+is surrounded by a fog of myths. 
+
+[KF] Everything is a remix –  
+appropriated
+	transformed		
+		& subverted
+
+copy     transform     & combine
+
+[Voice] Open your eyes.
+
+[DG ] The music you hear was machine generated. 
+
+[PDM] Remixing implies a reverence
+for the original. 
+
+[Voice] Recordings require
+a critical interpretation
+to give us any connection
+to the past. 
+
+A unique liminal 
+dystopian space
+
+nostalgic yearnings 
+
+for an idealized other realm
+an alternate reality
+of the could have been.
+
+[GK] Music has different kinds of entities.
+
+[KF] Everything is a remix—  
+appropriated
+	transformed
+		& subverted
+
+copy     transform     & combine
+
+[Voice] Open your eyes.
+
+[GK] What does the culture
+make available for us
+to make our meanings with?
+
+[AB] Remix as a strategy for decolonizing
+classification systems
+
+[PDM] digital literacy 
+
+music
+	collage
+	          &           sampling
+
+are a beautiful reflection 
+of that democratization of culture
+
+[GK] combinations of things
+
+[AB] entangled relations
+
+[GK] from linearity to modularity
+
 </div>
 
     <p>Coming soon: Content for this page will explore the concept of entities as part of remixed methods in waveform pedagogy.</p>
