--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -169,6 +169,33 @@ of that democratization of culture
 
 [GK] from linearity to modularity
 
+my interest is to produce something
+which matches the interest 
+of the people you have in mind
+as visitors to this site
+
+[KF] Everything is a remix—  
+appropriated
+	transformed
+		& subverted
+
+copy     transform     & combine
+
+[Voice] Open your eyes.
+
+[Distorted Voice] an alternate reality
+
+Music fades
+
+[GK] - Gunther Kress
+[KF] - Kerby Ferguson
+[JS] - Joseph Salem
+[AB] - Anne Burdick
+[DG] - David Gunkel
+[PDM] - Paul D. Miller
+  </pre>
+</div>
+
 </div>
 
     <p>Coming soon: Content for this page will explore the concept of entities as part of remixed methods in waveform pedagogy.</p>
