--- a/poem-is-research.html
+++ b/poem-is-research.html
@@ -71,21 +71,100 @@
 
 <p class="transcript-link">
   <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
-  <a href="intro-transcript.html">Accessible Plain Text Transcript</a>
+  <a href="poem-is-research-transcript.html">Accessible Plain Text Transcript</a>
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll">
-    <p><strong>Placeholder Title</strong></p>
-    <p>Placeholder lyric line 1<br>
-    Placeholder lyric line 2</p>
+  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+  <pre style="white-space: pre-wrap; font-family: sans-serif;">
+I.
 
-    <p>Placeholder lyric line 3<br>
-    Placeholder lyric line 4</p>
+the poem is the research &
+these bars are the method
 
-    <p>...</p>
-  </div>
+I said what I said to scholars
+triangulating circles as their method
+
+I said what I said to
+switch up the flow, technique & method
+
+for how we come to know 
+the nameless hunger of loss as method
+
+my lines aided & abetted
+the murder of their method
+
+forever indebted to poets and MCs
+I sweated at 16 / writing rhymes as their method
+
+Listen: its spoken words on hot mics,
+rhymes tight, the body is a breakbeat method
+
+that channels the Godself
+inside the fractured skull of method
+
+testify / witness / pray / 
+sing / worship / as method
+
+holy & whole, we
+remix, collage, mosaic method
+
+take to the mic at night poet
+it’s all just a moonlight method
+
+it’s the why to the how 
+to the 1, 2, & we don’t stop method
+
+forgiveness is a eucharist
+on the tongue of this method
+
+this poem is the slant of the
+sun through stain glass method
+
+so spit poem as research, poet,
+these bars are the method
+
+II.
+
+this poem is searching for itself
+in the transcript 
+
+it’s coding itself 
+into colorless containers of category 
+
+it’s apologizing for the lack 
+of citations in its hands 
+
+it has come empty & longing 
+for peer review
+
+in a special issue where 
+it will die behind a pay wall
+
+the corpse of this poem 
+is hanging from the window 
+
+of someone’s dissertation
+on the eve of their defense 
+
+it’s all rot & bone 
+& teeth & spit 
+
+this poem, a contortionist
+bending itself into spaces
+
+that are indifferent to the life 
+of the poem, to the poet
+
+this poem is trying so hard 
+to be more than a poem
+
+but it does not know how to
+undress for anyone other than itself
+  </pre>
+</div>
+
 </div>
 
     <p>Coming soon: Content for this page will explore how poetic form and method function as research in waveform pedagogy.</p>
