--- a/edsel-song.html
+++ b/edsel-song.html
@@ -71,21 +71,201 @@
 
 <p class="transcript-link">
   <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
-  <a href="intro-transcript.html">Accessible Plain Text Transcript</a>
+  <a href="edsel-song-transcript.html">Accessible Plain Text Transcript</a>
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll">
-    <p><strong>Placeholder Title</strong></p>
-    <p>Placeholder lyric line 1<br>
-    Placeholder lyric line 2</p>
+  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+  <pre style="white-space: pre-wrap; font-family: sans-serif;">
+you know
+I think I kind of just got lost
+for a second, 
+had to find my way back
 
-    <p>Placeholder lyric line 3<br>
-    Placeholder lyric line 4</p>
+reverse a story
+a narrative
+the truth of our arrival
+the history of our conditions
 
-    <p>...</p>
-  </div>
+we will build home 
+from home
+
+only the real will prevail
+only the real will ascend
+only the real will become
+
+everything I’m not
+makes me everything I am
+
+A. reclaim
+B. we flippin back
+
+this be the flip side
+
+I haven’t seen myself 
+that brave in a long time
+
+into shadow
+into face 
+into resistance
+
+being Filipino American
+a body to forget
+tongues to feel shame
+to toss is to turn in the air
+
+but then I force my pen
+upon the paper on the table
+
+my literature was
+spoken word poets
+& Hip Hop artists
+
+I’m not hiding anymore
+
+I didn’t want to be known
+as a slam poet
+I wanted to be known as a poet
+
+I didn’t want to be known
+as a spoken word artist
+I wanted to be known 
+as just an artist
+
+reverse a story
+a narrative
+the truth of our arrival
+the history of our conditions
+
+we will build home 
+from home
+
+only the real will prevail
+only the real will ascend
+only the real will become
+
+everything I’m not
+makes me everything I am
+
+A. reclaim
+B. we flippin back
+
+this be the flip side
+
+we repurpose their cries
+into an anthology of stories
+
+I’ve contoured my skin
+I’ve even cut my heart
+from my chest & 
+stitched it to my sleeve
+
+memories & feelings
+that I haven’t really explored
+in a long time
+
+damn—
+you go through all this shit
+but you’re still here
+
+the B side of a record
+the unimportant side
+in which we dance on
+in which we sing to
+in which we collect the dust from
+
+I became more socially aware
+it’s all connected, you know, 
+how we live
+how we perceive others
+it’s all political
+
+I never remember where I started from
+even though I haven’t traveled that far
+
+reverse a story
+a narrative
+the truth of our arrival
+the history of our conditions
+
+we will build home 
+from home
+
+only the real will prevail
+only the real will ascend
+only the real will become
+
+everything I’m not
+makes me everything I am
+
+A. reclaim
+B. we flippin back
+
+this be the flip side
+
+I wanna write my own shit
+do it my way
+
+into the fissures of arrival
+toss the fight from our fists
+in the air
+
+until it’s blown away
+until it’s wind
+
+we must cultivate the chaos
+
+I think what I still carry with me
+is just the courage & the bravery
+to still write
+
+I walked through the door
+of Hip Hop & spoken word
+
+almost like a fever dream, right?
+
+enter as an uncertainty
+& when asked what you are
+when you exit
+say you are becoming
+
+taking claim to my words
+& my poetry
+& my writing
+
+it’s never about where we will go
+because that will never be a concern
+as long as we make everything a home
+
+reverse a story
+a narrative
+the truth of our arrival
+the history of our conditions
+
+we will build home 
+from home
+
+only the real will prevail
+only the real will ascend
+only the real will become
+
+everything I’m not
+makes me everything I am
+
+A. reclaim
+B. we flippin back
+
+this be the flip side
+
+this is my last time performing
+for a long time
+
+I’m not just a performer now
+we’re all one right now
+  </pre>
+</div>
+
 </div>
 
     <p>Coming soon: Content for this page will explore Edsel’s contributions, narrative, and sonic imprint within the Waveforms project.</p>
