--- a/aaleah-song.html
+++ b/aaleah-song.html
@@ -71,21 +71,179 @@
 
 <p class="transcript-link">
   <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
-  <a href="intro-transcript.html">Accessible Plain Text Transcript</a>
+  <a href="aaleah-song-transcript.html">Accessible Plain Text Transcript</a>
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll">
-    <p><strong>Placeholder Title</strong></p>
-    <p>Placeholder lyric line 1<br>
-    Placeholder lyric line 2</p>
+  <<div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+  <pre style="white-space: pre-wrap; font-family: sans-serif;">
+in those days
+we wore the crown
 
-    <p>Placeholder lyric line 3<br>
-    Placeholder lyric line 4</p>
+my body is my home
+& everywhere else
+is where I stay 
 
-    <p>...</p>
-  </div>
+there’s a lot of things
+that you miss
+while running
+
+I believe that things
+fall     apart
+to fall together
+to fall     apart 
+
+I thought I knew all of me
+until I met all of you 
+
+finding unlikely entry points
+those moments of pause
+where, like, we could reconvene
+
+all these ways of speaking
+that I have are like
+valid ways of being
+
+we all get flustered
+by our reflection
+showing up unannounced
+
+& I could tell you
+you mean the world to me
+
+I could tell you
+you mean the moon & stars
+you mean the one candle lit
+in a dark room
+you mean the one squad lit
+in a classroom
+
+my body is my home
+& everywhere else
+is where I stay 
+
+there’s a lot of things
+that you miss
+while running
+
+I believe that things
+fall     apart
+to fall together
+to fall     apart 
+
+I thought I knew all of me
+until I met all of you
+
+like slam was a place where
+I felt like I was seen
+& people could connect with me
+
+it doesn’t matter what you call it
+insecurity is a type-everybody emotion
+
+there’s so much we can, we can
+do & be for each other
+
+I think my focus 
+is like oriented towards like
+truth-seeking
+
+how do you bend words
+like that?
+
+it made like learning & school
+feel like magic
+
+my body is my home
+& everywhere else
+is where I stay 
+
+there’s a lot of things
+that you miss
+while running
+
+I believe that things
+fall     apart
+to fall together
+to fall     apart 
+
+I thought I knew all of me
+until I met all of you
+
+the images are what guide
+the words
+
+& when the adults
+would visit our floating world
+they’d leave in a daydream
+where their memories archived
+returned on waves 
+of warmth & glee
+
+this was our power
+
+honoring memory
+
+no matter what
+this is a part of
+my identity &
+this community is part
+of who I am
+
+yeah, I want to create that space
+for people
+
+& the EN-ER-GY!
+
+my body is my home
+& everywhere else
+is where I stay 
+
+there’s a lot of things
+that you miss
+while running
+
+I believe that things
+fall     apart
+to fall together
+to fall     apart 
+
+I thought I knew all of me
+until I met all of you
+
+listening to a poem
+& letting it sit...sit with me
+& letting it like rest 
+like snowfall blanketing
+& just letting it cover me
+
+so like learning about
+knowledge of self
+caused me to really 
+think about like 
+my own heritage
+
+& like
+my own Blackness
+
+two Trinidadian parents
+a history in Trinidad & Tobago
+in Barbados
+
+& it’s like
+all of that is part of my identity
+as well as my lived experience
+& culture here
+as a Black person
+born in America
+to two Trinidadian people
+
+that was an extremely
+spiritual space
+  </pre>
+</div>
+
 </div>
 
     <p>Coming soon: Content for this page will explore Aaleah’s voice, story, and sonic contribution to the Waveforms project.</p>
