--- a/aaleah-song.html
+++ b/aaleah-song.html
@@ -76,7 +76,7 @@
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <<div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
   <pre style="white-space: pre-wrap; font-family: sans-serif;">
 in those days
 we wore the crown
