--- a/otto-song.html
+++ b/otto-song.html
@@ -71,21 +71,172 @@
 
 <p class="transcript-link">
   <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
-  <a href="intro-transcript.html">Accessible Plain Text Transcript</a>
+  <a href="otto-song-transcript.html">Accessible Plain Text Transcript</a>
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll">
-    <p><strong>Placeholder Title</strong></p>
-    <p>Placeholder lyric line 1<br>
-    Placeholder lyric line 2</p>
+  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+  <pre style="white-space: pre-wrap; font-family: sans-serif;">
+[voice] light flows through all
+through the great machine
 
-    <p>Placeholder lyric line 3<br>
-    Placeholder lyric line 4</p>
+first there was a people
+then there was      smoke
 
-    <p>...</p>
-  </div>
+then there was children
+of that      smoke
+
+I could have been a ghost
+before I even died
+
+protect what the fire left
+& what the fire left      was me
+
+conceptual ideas become
+physical spaces
+
+metaphor was discovery
+
+spinal cord of stone
+
+words conjure things
+
+the chorus is, 
+“I can run the world
+from my momma’s house”
+
+the funk of it
+
+that quantum part of      words
+
+sometimes I find the poem
+writhing on the floor
+twisting like a potion
+
+I, too, was born
+needing a way out
+before knowing
+what I needed to escape from
+
+first there was a people
+then there was      smoke
+
+then there was children
+of that      smoke
+
+I could have been a ghost
+before I even died
+
+protect what the fire left
+and what the fire left      was me
+
+I’ve been thinking a lot about
+my Jewish identity
+in terms of queerness & anticolonialism
+
+I’d be another      nothing
+under history’s rotting tongue
+
+I’ve been thinking about 
+a decolonized Judaism for a while
+
+I recognize it
+because it’s      Love
+but it looks nothing like mine
+
+records      of where each 
+of my ancestors
+became a      ghost
+
+do you know how many
+trans people      disappear
+into their own hands
+& leave this world
+without a      sound?
+
+the grief of metamorphosis
+& the metamorphosis of grief
+
+in that world
+everything is mine
+or it’s kindling
+
+first there was a people
+then there was      smoke
+
+then there was children
+of that      smoke
+
+I could have been a ghost
+before I even died
+
+protect what the fire left
+& what the fire left      was me
+
+those genocides play out
+not just in a gas chamber
+but in your schooling of your thing
+the way you were moved 
+around in the world
+what neighborhoods 
+you’re allowed to live in
+
+I’ve noticed I am my best teacher
+or creating my best teaching
+when I am co-authoring
+
+I wish I showed up
+to myself, too, sometimes
+
+poem as exhibit
+
+& what if they walk through it
+in a different order than you curated
+right? & then you have a new thing
+
+you think I want to archive
+my friend into      memoria
+just to keep them alive?
+
+sometimes when writing about my own gender
+I feel like I’m writing into my future gravestone
+but in this space
+
+I feel like I’m tending a garden
+I feel joy
+I grow flowers 
+
+the color of my dead      friend’s
+lilac hair in these margins
+because that’s the closest thing
+
+I’ll ever see her smile again
+
+first there was a people
+then there was      smoke
+
+then there was children
+of that      smoke
+
+I could have been a ghost
+before I even died
+
+protect what the fire left
+& what the fire left      was me
+
+this is my last Word Up
+& it is really, really painful
+& hard for me 
+this event has been really transformative
+I wouldn’t be where I am without this event
+without the work that Mooney does
+without all of this work
+& without the people who come like you
+so thank you from the bottom of my heart
+  </pre>
+</div>
+
 </div>
 
     <p>Coming soon: Content for this page will explore Otto’s narrative and sonic presence within the Waveforms project.</p>
