--- a/outro.html
+++ b/outro.html
@@ -71,21 +71,116 @@
 
 <p class="transcript-link">
   <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
-  <a href="intro-transcript.html">Accessible Plain Text Transcript</a>
+  <a href="outro-transcript.html">Accessible Plain Text Transcript</a>
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
   <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll">
-    <p><strong>Placeholder Title</strong></p>
-    <p>Placeholder lyric line 1<br>
-    Placeholder lyric line 2</p>
+  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+  <pre style="white-space: pre-wrap; font-family: sans-serif;">
+our narratives seemed
+to flow into one another
+as we told stories		         you know / 
+almost like rivers merging	         if it inspires one person / 
+with the ocean 		         then it’s gonna be worth it
+as the waters empty 
+the sedimentary deposits						What type of world
+of story into one							 do we want to see?
+larger collective body
+of experience
 
-    <p>Placeholder lyric line 3<br>
-    Placeholder lyric line 4</p>
+what I want
+is a world in which
+it is easier for us to Love
 
-    <p>...</p>
-  </div>
+so you have to 
+listen
+
+enter as an uncertainty 
+& when asked what you are
+when you exit say
+you are becoming
+
+listen
+
+that was—
+an extremely spiritual space
+
+narrative is radical
+creating us 
+as the very moment
+it is being created
+
+I’ve noticed
+I am my best teacher
+or creating my best teaching
+when I am co-authoring 
+
+everything I’m not
+makes me everything
+I am 
+
+I’d like to think of it 
+as Radical Love
+
+Radical Love
+
+vividly inventing
+the very identity
+of everything
+
+there’s so much
+we can, we can
+do & be
+for each other
+
+you mean 
+I thought I knew
+all of me
+until I met all of you
+
+you mean magic
+& holy & sorcerer
+you mean depth & ocean
+& I am a wanderer
+still not a swimmer
+I clung to the sides
+of your Everything
+
+& I could tell you
+you mean the world to me
+I could tell you
+you mean the moon & stars
+
+you mean the one candle
+lit in a dark room
+you mean the one squad 
+lit in the classroom
+
+to see the profound effect
+that it has on someone
+five, ten, fifteen years later
+
+we’re forever in process
+& on our way
+as we dream
+forward
+
+ready to imagine 
+another world &
+ready to fight for it
+
+I know at the very least
+I can still get to wear the crown 
+& that would never
+have to end
+
+how lovely it is 
+this thing
+we have done together
+  </pre>
+</div>
+
 </div>
 
     <p>Content coming soon...</p>
