--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
     <p>I come to this work as a poet, DJ, and beatmaker who attends to the complexities of sound. For me, sound is a way of knowing and composing. Sound work offers methods of unflattening (Sousanis, 2015) traditional research and in this study includes the intentional uses of spoken language, field recordings, and musical samples. Sonic compositions require embodied sensibilities in which rhythms, loops, frequencies, and fragments of sound are remixed into new configurations. All of the music and poetry in this webtext are original. I produced the album using a digital audio workstation (DAW) called Ableton Live (see Figure 1).</p>
 
     <figure>
-      <img src="media/images/figure1.jpg" alt="Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process." style="max-width: 100%; height: auto;">
+      <img src="media/images/figure1.png" alt="Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process." style="max-width: 100%; height: auto;">
       <figcaption>Figure 1: Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process.</figcaption>
     </figure>
 
     <p>The title <strong>WAVEFORMS</strong> refers to the visual representation of sound (see Figure 2), symbolized by the lines you see when working inside a DAW like Ableton Live. These lines represent amplitude over time, revealing the loudness, rhythm, and dynamics of a recording. Every voice in this project—every laugh, breath, pause, or verse—was recorded as a waveform.</p>
 
     <figure>
-      <img src="media/images/figure2.jpg" alt="Waveform of the Amen Break, the iconic six-second drum loop from The Winstons' 1969 track 'Amen, Brother.' Widely sampled in Hip Hop, jungle, and electronic music, this breakbeat exemplifies how sound fragments become part of the collective sonic archive through continuous reuse, remix, and reinvention." style="max-width: 100%; height: auto;">
+      <img src="media/images/figure2.png" alt="Waveform of the Amen Break, the iconic six-second drum loop from The Winstons' 1969 track 'Amen, Brother.' Widely sampled in Hip Hop, jungle, and electronic music, this breakbeat exemplifies how sound fragments become part of the collective sonic archive through continuous reuse, remix, and reinvention." style="max-width: 100%; height: auto;">
       <figcaption>Figure 2: Waveform of the Amen Break, the iconic six-second drum loop from The Winstons' 1969 track 'Amen, Brother.' Widely sampled in Hip Hop, jungle, and electronic music, this breakbeat exemplifies how sound fragments become part of the collective sonic archive through continuous reuse, remix, and reinvention.</figcaption>
     </figure>
   </main>
