--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
     <p>The title <strong>WAVEFORMS</strong> refers to the visual representation of sound (see Figure 2), symbolized by the lines you see when working inside a DAW like Ableton Live. These lines represent amplitude over time, revealing the loudness, rhythm, and dynamics of a recording. Every voice in this project—every laugh, breath, pause, or verse—was recorded as a waveform.</p>
 
+    <div style="clear: both;"></div>
     <figure class="figure-2">
   <img src="media/images/figure2.png" alt="Waveform of the Amen Break, the iconic six-second drum loop from The Winstons' 1969 track 'Amen, Brother.' Widely sampled in Hip Hop, jungle, and electronic music, this breakbeat exemplifies how sound fragments become part of the collective sonic archive through continuous reuse, remix, and reinvention.">
   <figcaption>Figure 2: Waveform of the Amen Break, the iconic six-second drum loop from The Winstons' 1969 track 'Amen, Brother.' Widely sampled in Hip Hop, jungle, and electronic music, this breakbeat exemplifies how sound fragments become part of the collective sonic archive through continuous reuse, remix, and reinvention.</figcaption>
