--- a/methods.html
+++ b/methods.html
@@ -61,7 +61,7 @@
 </nav>
 
   </header>
-  <main>
+  <main class="content-wrap">
     <h1>Remixed Methods</h1>
     <p>Content coming soon...</p>
   </main>
