--- a/outro.html
+++ b/outro.html
@@ -61,7 +61,7 @@
 </nav>
 
   </header>
-  <main>
+  <main class="content-wrap">
     <h1>Outro</h1>
     <div class="audio-embed">
   <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
