--- a/references.html
+++ b/references.html
@@ -61,7 +61,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="content-wrap">
     <h1>References</h1>
     <ul>
   <p>Akom, Antwi A. (2009). <em>Critical hip hop pedagogy as a form of liberatory praxis.</em> Equity and Excellence in Education, 42(1), 52–66. <a href="https://doi.org/10.1080/10665680802612519" target="_blank">https://doi.org/10.1080/10665680802612519</a></p>
