--- a/references.html
+++ b/references.html
@@ -183,6 +183,7 @@
 <p>Sousanis, Nick. (2015). <em>Unflattening.</em> Harvard University Press.</p>
 
 <p>Sterne, Jonathan. (Ed.). (2012). <em>The sound studies reader.</em> Routledge.</p>
+</main>
 
 <footer>
     <p>&copy; 2025 Brian Mooney</p>
