--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <figcaption>Figure 2: Waveform of the Amen Break, the iconic six-second drum loop from The Winstons' 1969 track 'Amen, Brother.' Widely sampled in Hip Hop, jungle, and electronic music, this breakbeat exemplifies how sound fragments become part of the collective sonic archive through continuous reuse, remix, and reinvention.</figcaption>
 </figure>
 
-    <p>In a recent text message exchange with multimedia scholar Emery Petchauer, we discussed the limits and possibilities of form and representation. He pointed me back to a conversation between him and Ruth Nicole Brown on the Forms of Freedom website (Petchauer & Brown, 2022), where form is understood not as fixed, but in terms of dynamic possibility. In an audio essay for Seismograf Peer, Petchauer and Brown (2023) offered “borderless multiphonic vignettes” that refuse “representation and discursive explanation” as a deliberate, anticolonial method (p. 1). I was drawn to their refusal of representation as a singular mode of knowing. Instead, they lean into collisions of sounds, voices, and forms that transgress semantic and rhetorical permanence, almost nearing the edge of collapse. Their work parallels the participatory compositional processes used to co-produce the songs on this mixtape. In this webtext, form is not fixed, but emergent. These sonic epistemologies shaped my approach to research and composition as embodied, entangled, and polyphonic.</p> 
+    <p>In a recent text message exchange with multimedia scholar Emery Petchauer, we discussed the limits and possibilities of form and representation. He pointed me back to a conversation between him and Ruth Nicole Brown on their <a href="https://formsoffreedom.com/With-Reverence" target="_blank">Forms of Freedom website</a> (Petchauer &amp; Brown, 2022), where form is understood not as fixed, but in terms of dynamic possibility. In an audio essay for <em>Seismograf Peer</em>, Petchauer and Brown (2023) offered “borderless multiphonic vignettes” that refuse “representation and discursive explanation” as a deliberate, anticolonial method (p. 1). I was drawn to their refusal of representation as a singular mode of knowing. Instead, they lean into collisions of sounds, voices, and forms that transgress semantic and rhetorical permanence, almost nearing the edge of collapse. Their work parallels the participatory compositional processes used to co-produce the songs on this mixtape. In this webtext, form is not fixed, but emergent. These sonic epistemologies shaped my approach to research and composition as embodied, entangled, and polyphonic.</p> 
 
 <p><strong>The Sounds of Our Inquiry</strong></p>
 
@@ -109,7 +109,7 @@
 <p>2. How do we re-member the youth poetry slam? 
 <p>3. What kinds of critical Hip Hop literacies are practiced in the youth poetry slam?</p>
 
-<p>One significant question I asked participants during semi-structured interviews was “what do these experiences sound like to you?” This question became an invitation into multimodal meaning-making through collaborative composition, sonic memory work, and critical reflection.</p>
+<p>One significant question I asked participants during semi-structured interviews was “<strong>what do these experiences <em>sound</em> like to you?</strong>” This question became an invitation into multimodal meaning-making through collaborative composition, sonic memory work, and critical reflection.</p>
 
 <p><strong>What to Expect</strong></p>
 
@@ -117,9 +117,11 @@
 
 <p><strong>Some Guidance on How to Read, Listen & Engage</strong></p>
 
-<p>Some pages include one track, while others provide a dropdown menu for multiple tracks within that category. You can read the transcribed lyrics as you listen by clicking on Show Transcript. This triggers a scrollable text box with lyrics embedded on the page. This is ideal for reading along while you listen. Alternatively, you can click on Accessible Plain Text Transcript, which opens a new page with text only. As you listen, you can scroll or rewind. You can pause. You can move within, between, and through. There is no single linear path through the webtext—no prescriptive order that dictates how you engage with the compositions.  In this way, the webtext acknowledges a turn from linearity to modularity. WAVEFORMS is a digital exhibit that you are invited to curate as a participant-visitor to this site.</p>  
+<p>Some pages include one track, while others provide a dropdown menu for multiple tracks within that category. You can read the transcribed lyrics as you listen by clicking on 
+<span style="color: #431a50;">Show Transcript</span>. This triggers a scrollable text box with lyrics embedded on the page. This is ideal for reading along while you listen. 
+Alternatively, you can click on <span style="color: #431a50;">Accessible Plain Text Transcript</span>, which opens a new page with text only. As you listen, you can scroll or rewind. You can pause. You can move within, between, and through. There is no single linear path through the webtext—no prescriptive order that dictates how you engage with the compositions.  In this way, the webtext acknowledges a turn from linearity to modularity. WAVEFORMS is a digital exhibit that you are invited to curate as a participant-visitor to this site.</p>  
 
-<p>Each track of the mixtape is embedded on its respective menu page. For an audio-only listening experience, the audio compositions are assembled as a playlist on Soundcloud below.</p> 
+<p><em>Each track of the mixtape is embedded on its respective menu page. For an audio-only listening experience, the audio compositions are assembled as a playlist on Soundcloud below.</em></p> 
 
 <div class="audio-embed">
   <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
