--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
   </iframe>
 </div>
 
+<div class="track-nav">
+  <a href="recife.html" class="track-button">NEXT TRACK &#8594;</a>
+</div>
+ 
   </main>
 
   <footer>
