--- a/edsel-song.html
+++ b/edsel-song.html
@@ -269,6 +269,12 @@ we’re all one right now
 </div>
 
     <p>Coming soon: Content for this page will explore Edsel’s contributions, narrative, and sonic imprint within the Waveforms project.</p>
+  
+  <div class="track-nav">
+  <a href="poem-is-research.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
+  <a href="aaleah-song.html" class="track-button next">NEXT TRACK &#8594;</a>
+</div>
+
   </main>
 
    <footer>
