--- a/fatmata-song.html
+++ b/fatmata-song.html
@@ -293,6 +293,12 @@ I was just like, wow we did something really incredible
 </div>
 
     <p>Content coming soon...</p>
+  
+  <div class="track-nav">
+  <a href="otto-song.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
+  <a href="outro.html" class="track-button next">NEXT TRACK &#8594;</a>
+</div>
+
   </main>
 
   <footer>
