--- a/long-as-i-live.html
+++ b/long-as-i-live.html
@@ -157,6 +157,12 @@ electronic.
 </div>
 
     <p>Coming soon: Content for this page will explore the themes of Long as I Live in the context of waveform, memory, and pedagogy.</p>
+  
+    <div class="track-nav">
+  <a href="recife.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
+  <a href="realm-of-entities.html" class="track-button next">NEXT TRACK &#8594;</a>
+</div>
+  
   </main>
 
     <footer>
