--- a/otto-song.html
+++ b/otto-song.html
@@ -240,6 +240,12 @@ so thank you from the bottom of my heart
 </div>
 
     <p>Coming soon: Content for this page will explore Otto’s narrative and sonic presence within the Waveforms project.</p>
+ 
+  <div class="track-nav">
+  <a href="aaleah-song.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
+  <a href="fatmata-song.html" class="track-button next">NEXT TRACK &#8594;</a>
+</div>
+    
   </main>
 
   <footer>
