--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -199,6 +199,12 @@ Music fades
 </div>
 
     <p>Coming soon: Content for this page will explore the concept of entities as part of remixed methods in waveform pedagogy.</p>
+ 
+  <div class="track-nav">
+  <a href="long-as-i-live.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
+  <a href="poem-is-research.html" class="track-button next">NEXT TRACK &#8594;</a>
+</div>
+	  
   </main>
 
    <footer>
