--- a/recife.html
+++ b/recife.html
@@ -191,7 +191,7 @@ My curiosity never stop.
     <p>Coming soon: Content for this page will explore connections between Recife and Ferguson, focusing on waveform, culture, and pedagogy themes.</p>
   
   <div class="track-nav">
-  <a href="idex.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
+  <a href="index.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
   <a href="long-as-i-live.html" class="track-button next">NEXT TRACK &#8594;</a>
 </div>
 
