--- a/recife.html
+++ b/recife.html
@@ -190,7 +190,7 @@ My curiosity never stop.
 
     <h2>Recife to Ferguson: Sampling Critical Pedagogy Through Sonic Praxis</h2>
 
-<p><em>conscientização</em> – Portuguese, meaning <em>critical consciousness</em></p>
+<p class="center-text"><<em>conscientização</em> – Portuguese, meaning <em>critical consciousness</em></p>
 
 <p>When I first read <em>Pedagogy of the Oppressed</em> (1970), it changed me. Paulo Freire’s words gave me a language to name the world I was witnessing—systemic racism, settler colonialism, hyper-capitalism – and what bell hooks calls imperialist white-supremacist capitalist patriarchy. Freire helped me see how oppression dehumanizes everyone, including those who benefit from it. That insight called me more deeply into the work of liberation: as a teacher, poet, and educational researcher. It also affirmed a truth I was just beginning to understand—that education is inherently political and deeply connected to our “ontological vocation to be more fully human” (p. 70).</p>
 
@@ -202,12 +202,12 @@ My curiosity never stop.
 
 <p>The music draws on a Brazilian palette of sounds and textures as a way to honor Freire’s homeland. I made the beat using samba-influenced percussion and a lead melody sampled from a cavaquinho–a small, four-string instrument originating in Portugal. The hook features chopped up vocals from a Brazilian folksinger, reconfigured into a new musical sentence. This wasn’t just an aesthetic choice—it was part of an intentional sonic methodology, a transnational homage, and an affirmation of Hip Hop’s Afro-diasporic lineage.</p>
 
-<p>The production itself was a praxis for me—<br>
+<p class="center-text">The production itself was a praxis for me—<br>
 a praxis of critical music production /<br>
 a sonic Hip Hop praxis /<br>
 reminding me always to...</p>
 
-<p><em>“Reflect, act, and change what is not working.”<br>
+<p class="center-text"><<em>“Reflect, act, and change what is not working.”<br>
 —Ana Cruz</em></p>
 
   <div class="track-nav">
