--- a/recife.html
+++ b/recife.html
@@ -188,7 +188,7 @@ My curiosity never stop.
   </div>
 </div>
 
-    <h2>Recife to Ferguson: Sampling Critical Pedagogy Through Sonic Praxis</h2>
+    <h2>Sampling Critical Pedagogy Through Sonic Praxis</h2>
 
 <p class="center-text"><<em>conscientização</em> – Portuguese, meaning <em>critical consciousness</em></p>
 
@@ -207,7 +207,7 @@ a praxis of critical music production /<br>
 a sonic Hip Hop praxis /<br>
 reminding me always to...</p>
 
-<p class="center-text"><<em>“Reflect, act, and change what is not working.”<br>
+<p class="center-text"><em>“Reflect, act, and change what is not working.”<br>
 —Ana Cruz</em></p>
 
   <div class="track-nav">
